--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,16 @@
 spring:
-    datasource:
-        url: jdbc:mysql://ed-rds-01.cdgiiabcm6en.us-east-1.rds.amazonaws.com:3306/edwiki?createDatabaseIfNotExist=true
-        username: admin
-        password: admin123
-        driverClassName: com.mysql.cj.jdbc.Driver
-    jpa:
-        hibernate.ddl-auto: create
-        show-sql: true
-        generate-ddl: false
-  # Producer properties
+  datasource:
+    url: jdbc:mysql://eos-rds-01.cv0sq00asw7c.us-east-1.rds.amazonaws.com:3306/catalog
+    username: admin
+    password: admin123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL57Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+  
+# Producer properties
     kafka:
       bootstrap-servers: b-2.edkafka01.xgccjt.c18.kafka.us-east-1.amazonaws.com:9092
       group-id: group_id
