--- a/application.yml
+++ b/application.yml
@@ -12,7 +12,7 @@ spring:
   
 # Producer properties
     kafka:
-      bootstrap-servers: b-2.edkafka01.xgccjt.c18.kafka.us-east-1.amazonaws.com:9092
+      bootstrap-servers: b-2.eoskafka01.hv98xb.c12.kafka.us-east-1.amazonaws.com:9092
       group-id: group_id
 topic:
   name:
