--- a/application.yml
+++ b/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL57Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
   
 # Producer properties
